[SC-4094] Edit Record view, labels overlap fields Fixed overlapping fields

--- a/sugarcrm/styleguide/less/sugar-specific/rtl.less
+++ b/sugarcrm/styleguide/less/sugar-specific/rtl.less
@@ -197,16 +197,16 @@ html.rtl {
                 margin-right: 8px;
                 margin-left: 0;
                 right: auto;
-                left: -8px;
+                left: 0;
             }
             .btn.second {
-                left: 28px;
+                left: 36px;
             }
             .btn.third {
-                left: 64px;
+                left: 72px;
             }
             .select2-container, .select2-result {
-                margin-right: 7px;
+                margin-right: 0;
             }
             .edit .control-group .controls-three {
                 padding-right: 0px;
@@ -237,7 +237,7 @@ html.rtl {
     }
 
     div .record .record-cell .select2-container {
-        margin: -5px -7px 0 0;
+        margin: 0 -7px 0 0;
     }
 
     /* NOTE, not going to work for single column or more than two column record view */
